--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">  <!--告诉浏览器网站使用的字符-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--使浏览器显示时适应设备-->
   <meta name="keywords" content="钟希妍, Xiyan, math, homepage">  <!--为搜索引擎提供的关键字列表-->
-  <meta name="description" content="钟希妍的主页 Sihao's homepage">  <!--告诉搜索引擎网站的主要内容-->
+  <meta name="description" content="钟希妍的主页 Xiyan's homepage">  <!--告诉搜索引擎网站的主要内容-->
   <meta name="author" content="Xiyan Zhong">  <!--作者-->
-  <title> Sihao's homepage </title>
+  <title> Xiyan's homepage </title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <h4> Email: xzhong4 [AT] nd [DOT] edu </h4>
   </center>
   <hr>
-  <p> I am a second-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. I am mainly interested in xxx. Here is my <a href="https://xiyan-zhong.github.io/">CV</a> (last updated: TBD). </p>
+  <p> I am a second-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. I am mainly interested in geometric group theory. Here is my <a href="https://xiyan-zhong.github.io/">CV</a> (last updated: TBD). </p>
   <hr>
   <h3> Papers/Preprints: </h3>
   <p> (null) </p>
