--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h4> Email: xzhong4 [AT] nd [DOT] edu </h4>
   </center>
   <hr>
-  <p> I am a second-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. I am mainly interested in geometric group theory. Here is my <a href="https://xiyan-zhong.github.io/">CV</a> (last updated: TBD). </p>
+  <p> I am a forth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. I am mainly interested in geometric group theory. Here is my <a href="https://xiyan-zhong.github.io/">CV</a> (last updated: TBD). </p>
   <hr>
   <h3> Papers/Preprints: </h3>
   <p> (null) </p>
