--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <p> I am a fourth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. I am mainly interested in geometric group theory. Here is my <a href="https://xiyan-zhong.github.io/">CV</a> (last updated: TBD). </p>
   <hr>
   <h3> Papers/Preprints: </h3>
-  <p> (null) </p>
+  <p> <a href="xiyan-zhong.github.io/LevelCoh.pdf">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures</a> </p>
   <hr>
 </body>
 </html>
