--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   <meta name="author" content="Xiyan Zhong">  <!--作者-->
   <title> Xiyan's homepage </title>
 </head>
-
+    <title>Xiyan Zhong</title>
 <body>
-  <center>
-    <h1> 钟希妍 Xiyan Zhong </h1>
+    <br>
+    <img align="right" src="IMG_20240115_191338.jpg" alt="Picture in the ND math lounge" style="width: 333px; height: 396 px">
+    <p style="font-size:40px;">
+      <b>Xiyan Zhong (钟希妍)</b> ==$0
+    </p>
     <h4> Email: xzhong4 [AT] nd [DOT] edu </h4>
-    <img src="IMG_20240115_191338.jpg" width="50% length="50">
+    
   </center>
   <hr>
   <p> I am a fourth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. I am mainly interested in geometric group theory. Here is my <a href="https://xiyan-zhong.github.io/">CV</a> (last updated: TBD). </p>
