--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
     <br>
     <img align="right" src="IMG_20240115_191338.jpg" alt="Picture in the ND math lounge" style="width: 333px; height: 396 px">
     <p style="font-size:40px;">
-      <b>Xiyan Zhong (钟希妍)</b> ==$0
-    </p>
-    <h4> Email: xzhong4 [AT] nd [DOT] edu </h4>
-    
-  </center>
+      <b>Xiyan Zhong (钟希妍)</b>
+    </p> 
   <hr>
-  <p> I am a fourth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. I am mainly interested in geometric group theory. Here is my <a href="https://xiyan-zhong.github.io/">CV</a> (last updated: TBD). </p>
+  <p> I am a fourth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. I am mainly interested in geometric group theory. </p>
   <hr>
+  <h3> Contact Information</h3>
+  <br>
+  "&emsp;&emsp;$emsp; Email: xzhong4@nd.edu"
+  <br>
+  "&emsp;&emsp;$emsp; Office: B02 Hayes-Healy"
+  
   <h3> Papers/Preprints: </h3>
   <p> <a href="LevelCoh.pdf">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures</a> </p>
   <hr>
