--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
       <b>Xiyan Zhong (钟希妍)</b>
     </p> 
   <hr>
-  <p> I am a fourth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. I am mainly interested in geometric group theory. </p>
+  <p> I am a fourth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. I am mainly interested in geometric group theory, especially mapping class groups. </p>
   <hr>
   <h3> Contact Information</h3>
   <br>
-  "&emsp;&emsp;$emsp; Email: xzhong4@nd.edu"
+  "&emsp;&emsp; Email: xzhong4@nd.edu"
   <br>
-  "&emsp;&emsp;$emsp; Office: B02 Hayes-Healy"
+  "&emsp;&emsp; Office: B02 Hayes-Healy"
+  <br>
   
   <h3> Papers/Preprints: </h3>
   <p> <a href="LevelCoh.pdf">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures</a> </p>
