--- a/index.html
+++ b/index.html
@@ -16,18 +16,33 @@
     <p style="font-size:40px;">
       <b>Xiyan Zhong (钟希妍)</b>
     </p> 
-  <hr>
+  <br>
   <p> I am a fourth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. </p>
-  <hr>
-  <h3> Contact Information</h3>
+  <br>
+  <h3> Contact Information:</h3>
   &emsp;&emsp; Email: xzhong4@nd.edu
   <br>
   &emsp;&emsp; Office: B02 Hayes-Healy
   <br>
-  <h3> Research Interests</h3>
+  <h3> Research Interest:</h3>
   <p>I am mainly interested in geometric group theory, especially mapping class groups.</p>
   <h3> Papers/Preprints: </h3>
   <p> <a href="LevelCoh.pdf">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures</a> </p>
+  <h3> Education:</h3>
+  <a href="https://english.pku.edu.cn/">Peking University</a>(2016.06-2020.09)
+  <br>
+  &emsp;&emsp; Advisor: <a href="http://scholar.pku.edu.cn/liuyi/home">Yi Liu</a>
+  <br>
+  &emsp;&emsp; Thesis: 
+  <br>
+  <a href="https://www.nd.edu/">University of Notre Dame</a>(2020.09-)
+  <br>
+  &emsp;&emsp; Advisor: <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>
+  <br>
+  &emsp;&emsp; Topic of Oral Exam: PL Morse Theory and Finiteness Properties of Groups
+  <h3> Teaching:</h3>
+  <br>
+  &emsp;&emsp;
   <hr>
 </body>
 </html>
