--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
   <br>
   &emsp;&emsp; Thesis: <a href="Thesis-Xiyan Zhong.pdf">Introduction to Gromov Hyperbolicity of the Curve Complex</a>
   <br>
+  <br>
   <a href="https://www.nd.edu/">University of Notre Dame</a>(2020.09-)
   <br>
   &emsp;&emsp; Advisor: <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>
   <br>
-  &emsp;&emsp; Topic of Oral Exam: PL Morse Theory and Finiteness Properties of Groups (<a href="Syllabus for Oral Exam.pdf">Syllabus</a>
+  &emsp;&emsp; Topic of Oral Exam: PL Morse Theory and Finiteness Properties of Groups (<a href="Syllabus for Oral Exam.pdf">Syllabus</a>)
   <hr>
   <h3> Teaching:</h3>
   <br>
