--- a/index.html
+++ b/index.html
@@ -45,9 +45,18 @@
   &emsp;&emsp; Topic of Oral Exam: PL Morse Theory and Finiteness Properties of Groups (<a href="Syllabus for Oral Exam.pdf">Syllabus</a>)
   <hr>
   <h3> Teaching:</h3>
+  Fall 2023: Instructor for Calculus A (<a href="https://www3.nd.edu/~m10350/">Math 10350</a>
   <br>
-  &emsp;&emsp;
+  Spring 2023: Tutor for Calculus III (Math 20550)
+  <br>
+  Fall 2022: Tutor for Calculus II (Math 10560)
+  <br>
+  Spring 2022: Tutor for Calculus III (Math 20550)
+  <br>
+  Fall 2021: Tutor for Calculus A (Math 10350)
   <hr>
+  <h3> Seminars:</h3>
+  Hosting the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a \href>)
 </body>
 </html>
 
