--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
   Spring 2022: Tutor for Calculus III (Math 20550)
   <br>
   Fall 2021: Tutor for Calculus A (Math 10350)
+  <br>
+  Spring 2020: Tutor for Mathematical Analysis II for College of Engineering at Peking University
+  <br>
+  Fall 2019: Tutor for Mathematical Analysis I for College of Engineering at Peking University
   <hr>
   <h3> Seminars:</h3>
-  Hosting the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a \href>)
+  Hosting the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a \href="">)
 </body>
 </html>
 
