--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
   &emsp;&emsp; Topic of Oral Exam: PL Morse Theory and Finiteness Properties of Groups (<a href="Syllabus for Oral Exam.pdf">Syllabus</a>)
   <hr>
   <h3> Summer Project in 2019 :</h3>
-  Visiting Prof. <a href="https://math.ou.edu/~jmalestein/">Justin Malestein</a> 
+  Visited Prof. <a href="https://math.ou.edu/~jmalestein/">Justin Malestein</a> at the University of Okalahoma and finised a computation of the image of Johnson homomorphism for all compact surfaces (<a href="ImageofJohnsonHomomorphism.pdf">Report</a>)
   <hr>
   <h3> Seminars:</h3>
-  Hosting the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a \href="HomologyStabilityLecture.pdf">Notes</a>)
+  Hosted the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a \href="HomologyStabilityLecture.pdf">Notes</a>)
   <hr>
   <h3> Teaching:</h3>
   Fall 2023: Instructor for Calculus A (<a href="https://www3.nd.edu/~m10350/">Math 10350</a>
@@ -65,7 +65,6 @@
   <br>
   Fall 2019: Tutor for Mathematical Analysis I for College of Engineering at Peking University
   <hr>
-
 </body>
 </html>
 
