--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
   <h3> Seminars:</h3>
   Hosted the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a \href="HomologyStabilityLecture.pdf">Notes</a>)
   <hr>
-  <h3> Teaching:</h3>
-  Fall 2023: Instructor for Calculus A (<a href="https://www3.nd.edu/~m10350/">Math 10350</a>
-  <br>
-  Spring 2023: Tutor for Calculus III (Math 20550)
-  <br>
-  Fall 2022: Tutor for Calculus II (Math 10560)
-  <br>
-  Spring 2022: Tutor for Calculus III (Math 20550)
-  <br>
-  Fall 2021: Tutor for Calculus A (Math 10350)
-  <br>
-  Spring 2020: Tutor for Mathematical Analysis II for College of Engineering at Peking University
-  <br>
-  Fall 2019: Tutor for Mathematical Analysis I for College of Engineering at Peking University
+  <h3> Conference Attended:
+    <a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a>
+  <hr>
+  <h3> Teaching Experience:</h3>
+  Fall 2023: Instructor for Calculus A (<a href="https://www3.nd.edu/~m10350/">Math 10350</a>)
+    <ul>
+      <li>Fall 2023: Instructor, Calculus A (<a href="https://www3.nd.edu/~m10350/">Math 10350</a>)</li>
+      <li>Spring 2023: Teaching Assistant, Calculus III (Math 20550)</li>
+      <li>Fall 2022: Teaching Assistant, Calculus II (Math 10560)</li>
+      <li>Spring 2022: Teaching Assistant, Calculus III (Math 20550)</li>
+      <li>Fall 2021: Teaching Assistant, Calculus A (Math 10350)</li>
+      <li>Spring 2020: Teaching Assistant, Mathematical Analysis II for College of Engineering at Peking University</li>
+      <li>Fall 2019: Teaching Assistant, Mathematical Analysis I for College of Engineering at Peking University</li>
+    </ul>
   <hr>
 </body>
 </html>
