--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
   Visited Prof. <a href="https://math.ou.edu/~jmalestein/">Justin Malestein</a> at the University of Okalahoma and finised a computation of the image of Johnson homomorphism for all compact surfaces (<a href="ImageofJohnsonHomomorphism.pdf">Report</a>)
   <hr>
   <h3> Seminars:</h3>
-  Hosted the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a \href="HomologyStabilityLecture.pdf">Notes</a>)
+  Hosted the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a href="HomologyStabilityLecture.pdf">Notes</a>)
   <hr>
   <h3> Conference Attended:
-    <a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a>
+    <ul>
+   <li><a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a></li> 
+    </ul>  
   <hr>
   <h3> Teaching Experience:</h3>
-  Fall 2023: Instructor for Calculus A (<a href="https://www3.nd.edu/~m10350/">Math 10350</a>)
     <ul>
       <li>Fall 2023: Instructor, Calculus A (<a href="https://www3.nd.edu/~m10350/">Math 10350</a>)</li>
       <li>Spring 2023: Teaching Assistant, Calculus III (Math 20550)</li>
