--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
   &emsp;&emsp; Topic of Oral Exam: PL Morse Theory and Finiteness Properties of Groups (<a href="Syllabus for Oral Exam.pdf">Syllabus</a>)
   <hr>
   <h3> Summer Project in 2019 :</h3>
-  Visited Prof. <a href="https://math.ou.edu/~jmalestein/">Justin Malestein</a> at the University of Okalahoma and finised a computation of the image of Johnson homomorphism for all compact surfaces (<a href="ImageofJohnsonHomomorphism.pdf">Report</a>)
+  Visited Prof. <a href="https://math.ou.edu/~jmalestein/">Justin Malestein</a> at University of Okalahoma and finised a computation of the image of Johnson homomorphism for all compact surfaces (<a href="ImageofJohnsonHomomorphism.pdf">Report</a>)
   <hr>
   <h3> Seminars:</h3>
   Hosted the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a href="HomologyStabilityLecture.pdf">Notes</a>)
   <hr>
   <h3> Conference Attended:
     <ul>
-   <li><a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a></li> 
+  <li><a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a></li> 
+  <li><a href="https://math.uchicago.edu/~farb/ModM4/ModM4-webpage">Workshop/Minicourse on Mod(M^4)</a> organized by Benson Farb at Univerist of Chicago</li> 
     </ul>  
   <hr>
   <h3> Teaching Experience:</h3>
