--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <h3> Conference Attended:
 <ul>
 <li><a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a></li> 
-<li><a href="https://math.uchicago.edu/~farb/ModM4/ModM4-webpage">Workshop/Minicourse on Mod(M^4)</a> organized by Benson Farb at Univerist of Chicago</li> 
+<li><a href="https://math.uchicago.edu/~farb/ModM4/ModM4-webpage">Workshop/Minicourse on Mod(M^4)</a> organized by Benson Farb at University of Chicago</li> 
 </ul>  
   <hr>
   <h3> Teaching Experience:</h3>
