--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <h3> Seminars:</h3>
   Hosted the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a href="HomologyStabilityLecture.pdf">Notes</a>)
   <hr>
-  <h3> Conference Attended:
+  <h3> Conference Attended:</h3>
 <ul>
 <li><a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a></li> 
 <li><a href="https://math.uchicago.edu/~farb/ModM4/ModM4-webpage">Workshop/Minicourse on Mod(M^4)</a> organized by Benson Farb at University of Chicago</li> 
