--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
   <p> <a href="LevelCoh.pdf">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures</a> </p>
   <hr>
   <h3> Education:</h3>
-  <a href="https://english.pku.edu.cn/">Peking University</a>(2016.06-2020.07)
+  <a href="https://english.pku.edu.cn/">Peking University</a> (2016.06-2020.07)
   <br>
   &emsp;&emsp; Advisor: <a href="http://scholar.pku.edu.cn/liuyi/home">Yi Liu</a>
   <br>
   &emsp;&emsp; Thesis: <a href="Thesis-Xiyan Zhong.pdf">Introduction to Gromov Hyperbolicity of the Curve Complex</a>
   <br>
   <br>
-  <a href="https://www.nd.edu/">University of Notre Dame</a>(2020.08-)
+  <a href="https://www.nd.edu/">University of Notre Dame</a> (2020.08-)
   <br>
   &emsp;&emsp; Advisor: <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>
   <br>
   &emsp;&emsp; Topic of Oral Exam: PL Morse Theory and Finiteness Properties of Groups (<a href="Syllabus for Oral Exam.pdf">Syllabus</a>)
   <hr>
   <h3> Summer Project in 2019 :</h3>
-  Visited Prof. <a href="https://math.ou.edu/~jmalestein/">Justin Malestein</a> at the University of Oklahoma and finised a computation of the image of Johnson homomorphism for all compact surfaces (<a href="ImageofJohnsonHomomorphism.pdf">Report</a>)
+  Visited Prof. <a href="https://math.ou.edu/~jmalestein/">Justin Malestein</a> at the University of Oklahoma and computed the image of the Johnson homomorphism for all compact surfaces (<a href="ImageofJohnsonHomomorphism.pdf">Report</a>)
   <hr>
   <h3> Seminars:</h3>
   Hosted the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a href="HomologyStabilityLecture.pdf">Notes</a>)
@@ -53,7 +53,7 @@
   <h3> Conference Attended:</h3>
 <ul>
 <li><a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a></li> 
-<li><a href="https://math.uchicago.edu/~farb/ModM4/ModM4-webpage">Workshop/Minicourse on Mod(M^4)</a> organized by Benson Farb at the University of Chicago</li> 
+<li><a href="https://math.uchicago.edu/~farb/ModM4/ModM4-webpage">Workshop/Minicourse on Mod(M^4)</a> organized by <a href="https://math.uchicago.edu/~farb/">Benson Farb</a> at the University of Chicago</li> 
 </ul>  
   <hr>
   <h3> Teaching Experience:</h3>
