--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
   Visited Prof. <a href="https://math.ou.edu/~jmalestein/">Justin Malestein</a> at the University of Oklahoma and computed the image of the Johnson homomorphism for all compact surfaces (<a href="ImageofJohnsonHomomorphism.pdf">Report</a>)
   <hr>
   <h3> Seminars:</h3>
-  Hosted the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a href="HomologyStabilityLecture.pdf">Notes</a>)
+  <ul>
+    <li> Hosted the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a href="HomologyStabilityLecture.pdf">Notes</a>)</li>
+  </ul>
   <hr>
-  <h3> Conference Attended:</h3>
+  <h3> Conferences Attended:</h3>
 <ul>
-<li><a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a></li> 
+<li><a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a></li> at Purdue Univerity.
 <li><a href="https://math.uchicago.edu/~farb/ModM4/ModM4-webpage">Workshop/Minicourse on Mod(M^4)</a> organized by <a href="https://math.uchicago.edu/~farb/">Benson Farb</a> at the University of Chicago</li> 
 </ul>  
   <hr>
