--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <p> I am a fourth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. </p>
   <hr>
   <h3> Contact Information:</h3>
-  &emsp;&emsp; Email: xzhong4@nd.edu
+  &emsp;&emsp; Email: xzhong4 [at] nd [dot] edu
   <br>
   &emsp;&emsp; Office: B02 Hayes-Healy
   <hr>
