--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <h3> Conferences Attended:</h3>
 <ul>
 <li><a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a> at Purdue Univerity</li> 
-<li><a href="https://math.uchicago.edu/~farb/ModM4/ModM4-webpage">Workshop/Minicourse on Mod(M^4)</a> organized by <a href="https://math.uchicago.edu/~farb/">Benson Farb</a> at the University of Chicago</li> 
+<li><a href="https://math.uchicago.edu/~farb/ModM4/ModM4-webpage">Workshop/Minicourse on Mod(M^4)</a> at the University of Chicago</li> 
 </ul>  
   <hr>
   <h3> Teaching Experience:</h3>
