--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name="keywords" content="钟希妍, Xiyan, math, homepage">  <!--为搜索引擎提供的关键字列表-->
   <meta name="description" content="钟希妍的主页 Xiyan's homepage">  <!--告诉搜索引擎网站的主要内容-->
   <meta name="author" content="Xiyan Zhong">  <!--作者-->
-  <title> Xiyan's homepage </title>
-</head>
+  <title> Xiyan Zhong's homepage </title>
+</head> 
+   <title> Xiyan Zhong's homepage </title>
 <body>
     <br>
     <img align="right" src="IMG_20240115_191338.jpg" alt="Picture in the ND math lounge" style="width: 333px; height: 396 px">
