--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <meta name="description" content="钟希妍的主页 Xiyan's homepage">  <!--告诉搜索引擎网站的主要内容-->
   <meta name="author" content="Xiyan Zhong">  <!--作者-->
   <title> Xiyan Zhong's homepage </title>
+  <style>
+p {
+  background-image: url('IMG_20240116_004001.jpg');
+}
+</style>
 </head> 
 <body>
     <br>
