--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Xiyan Zhong">  <!--作者-->
   <title> Xiyan Zhong's homepage </title>
   <style>
-p {
+body {
   background-image: url('IMG_20240116_004001.jpg');
 }
 </style>
