--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
   <style>
 body {
   background-image: url('IMG_20240116_004001.jpg');
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-size: 100% 100%;
 }
 </style>
 </head> 
-<body>
+<body text="white" vlink="yellow" link="yellow">
     <br>
     <img align="right" src="IMG_20240115_191338.jpg" alt="Picture in the ND math lounge" style="width: 333px; height: 396 px">
     <p style="font-size:40px;">
