--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ body {
       <b>Xiyan Zhong (钟希妍)</b>
     </p> 
   <hr>
-  <p> I am a fourth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. </p>
+  <p> I am a fourth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. 
+    My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. </p>
   <hr>
   <h3> Contact Information:</h3>
   &emsp;&emsp; Email: xzhong4 [at] nd [dot] edu
