--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="钟希妍,Xiyan, Zhong, math, homepage">  <!--为搜索引擎提供的关键字列表-->
   <meta name="description" content="钟希妍的主页 Xiyan's homepage">  <!--告诉搜索引擎网站的主要内容-->
   <meta name="author" content="Xiyan Zhong">  <!--作者-->
+  <script src="https://fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
   <title> Xiyan Zhong's homepage </title>
   <style>
 body {
