--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 }
 </style>
 </head> 
-<body text="white" vlink="Navy" link="Yellow">
+<body text="white" vlink="Aqua" link="Red">
     <br>
     <img align="right" src="IMG_20240115_191338.jpg" alt="Picture in the ND math lounge" style="width: 333px; height: 396 px">
     <p style="font-size:40px;">
