--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <title> Xiyan Zhong's homepage </title>
   <style>
 body {
-  background-image: url('IMG_20240116_004001.jpg');
+  background-image: url('IMG20240108133831.jpg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 100%;
 }
 </style>
 </head> 
-<body text="white" vlink="Aqua" link="Red">
+<body text="Black" vlink="Aqua" link="Purple">
     <br>
     <img align="right" src="IMG_20240115_191338.jpg" alt="Picture in the ND math lounge" style="width: 333px; height: 396 px">
     <p style="font-size:40px;">
