--- a/index.html
+++ b/index.html
@@ -8,16 +8,8 @@
   <meta name="description" content="钟希妍的主页 Xiyan's homepage">  <!--告诉搜索引擎网站的主要内容-->
   <meta name="author" content="Xiyan Zhong">  <!--作者-->
   <title> Xiyan Zhong's homepage </title>
-  <style>
-body {
-  background-image: url('IMG20240108133831.jpg');
-   background-repeat: no-repeat;
-   background-attachment: fixed;
-   background-size: 100% 100%;
-}
-</style>
 </head> 
-<body text="white" vlink="Aquamarine" link="Gold">
+<body>
     <br>
     <img align="right" src="IMG_20240115_191338.jpg" alt="Picture in the ND math lounge" style="width: 333px; height: 396 px">
     <p style="font-size:40px;">
