--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <p>I am mainly interested in geometric group theory, especially mapping class groups.</p>
   <hr>
   <h3> Papers/Preprints: </h3>
-  <p> <a href="LevelCoh.pdf">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures</a> </p>
+  <p> <a href="https://arxiv.org/abs/2401.13869">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures</a> </p>
   <hr>
   <h3> Education:</h3>
   <ul>
