--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">  <!--世界通用语言编码-->
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">  <!--告诉浏览器网站使用的字符-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--使浏览器显示时适应设备-->
-  <meta name="keywords" content="钟希妍,Xiyan, Zhong, math, homepage">  <!--为搜索引擎提供的关键字列表-->
+  <meta name="keywords" content="Xiyan Zhong, math, Notre Dame, homepage, 钟希妍">  <!--为搜索引擎提供的关键字列表-->
   <meta name="description" content="钟希妍的主页 Xiyan's homepage">  <!--告诉搜索引擎网站的主要内容-->
   <meta name="author" content="Xiyan Zhong">  <!--作者-->
   <title> Xiyan Zhong's homepage </title>
