--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
   <hr>
   <h3> Conferences Attended:</h3>
 <ul>
+<li><a href="https://margalit.droppages.net/tsw24/about.html">Topology Student Workshop</a> at Vanderbilt University</li>
+<li>Mid-Atlantic Topology Conference at Northeastern University</li> 
 <li><a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a> at Purdue Univerity</li> 
 <li><a href="https://math.uchicago.edu/~farb/ModM4/ModM4-webpage">Workshop/Minicourse on Mod(M^4)</a> at the University of Chicago</li> 
 </ul>  
