--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <hr>
   <p> I am a fourth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. 
    <br>
-    My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. </p>
+    My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. Here is my <a href="cv.pdf">CV</a>.</p>
   <hr>
   <h3> Contact Information:</h3>
   &emsp;&emsp; Email: xzhong4 [at] nd [dot] edu
