--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta name="keywords" content="Xiyan Zhong, math, Notre Dame, homepage, 钟希妍">  <!--为搜索引擎提供的关键字列表-->
   <meta name="description" content="钟希妍的主页 Xiyan's homepage">  <!--告诉搜索引擎网站的主要内容-->
   <meta name="author" content="Xiyan Zhong">  <!--作者-->
-  <title> Xiyan (Sia) Zhong's homepage </title>
+  <title> Sia Xiyan Zhong's homepage </title>
 </head> 
 <body>
     <br>
     <img align="right" src="IMG_20240115_191338.jpg" alt="Picture in the ND math lounge" style="width: 333px; height: 396 px">
     <p style="font-size:40px;">
-      <b>Xiyan (Sia) Zhong (钟希妍)</b>
+      <b>Sia Xiyan Zhong (钟希妍)</b>
     </p> 
   <hr>
   <p> I am a fifth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. 
