--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
   <meta name="keywords" content="Xiyan Zhong, math, Notre Dame, homepage, 钟希妍">  <!--为搜索引擎提供的关键字列表-->
   <meta name="description" content="钟希妍的主页 Xiyan's homepage">  <!--告诉搜索引擎网站的主要内容-->
   <meta name="author" content="Xiyan Zhong">  <!--作者-->
-  <title> Sia Xiyan Zhong's homepage </title>
+  <title> Xiyan Zhong's homepage </title>
 </head> 
 <body>
     <br>
     <img align="right" src="IMG_20240115_191338.jpg" alt="Picture in the ND math lounge" style="width: 333px; height: 396 px">
     <p style="font-size:40px;">
-      <b>Sia Xiyan Zhong (钟希妍)</b>
+      <b>Xiyan Zhong (钟希妍)</b>
     </p> 
   <hr>
-  <p> I am a fifth-year graduate student in the <a href="https://math.nd.edu/">Department of Mathematics</a> at the University of Notre Dame. 
+  <p> I will be a postdoc at the <a href="https://www.mpim-bonn.mpg.de/">Max Planck Institute in Bonn</a> starting August 1st, 2025. I did my Ph.D. at the <a href="https://math.nd.edu/">University of Notre Dame</a> under the supervision of <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. 
    <br>
-    My advisor is <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. Here is my <a href="cv.pdf">CV</a>.</p>
+    Here is my <a href="cv.pdf">CV</a>.</p>
   <hr>
   <h3> Contact Information:</h3>
-  &emsp;&emsp; Email: xzhong4 [at] nd [dot] edu
+  &emsp;&emsp; Email: xiyanmath [at] gmail [dot] com
   <br>
-  &emsp;&emsp; Office: B02 Hayes-Healy
+  &emsp;&emsp; Vivatsgasse 7, 53111 Bonn, Germany
   <hr>
   <h3> Research Interest:</h3>
   <p>I am mainly interested in geometric group theory, especially mapping class groups.</p>
   <hr>
   <h3> Papers/Preprints: </h3>
-  <p> <a href="https://arxiv.org/abs/2401.13869">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures</a> </p>
+  <p> <a href="https://arxiv.org/abs/2401.13869">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures.</a> To appear in Geometry&Topology. </p>
   <hr>
   <h3> Education:</h3>
   <ul>
@@ -44,8 +44,6 @@
       <a href="https://www.nd.edu/">University of Notre Dame</a> (2020.08-)
   <br>
   &emsp;&emsp; Advisor: <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>
-  <br>
-  &emsp;&emsp; Topic of Oral Exam: PL Morse Theory and Finiteness Properties of Groups (<a href="Syllabus for Oral Exam.pdf">Syllabus</a>)
     </li>
   </ul>
   <hr>
