--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <b>Xiyan Zhong (钟希妍)</b>
     </p> 
   <hr>
-  <p> I will be a postdoc at the <a href="https://www.mpim-bonn.mpg.de/">Max Planck Institute in Bonn</a> starting August 1st, 2025. I did my Ph.D. at the <a href="https://math.nd.edu/">University of Notre Dame</a> under the supervision of <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. 
+  <p> I am a postdoc at the <a href="https://www.mpim-bonn.mpg.de/">Max Planck Institute in Bonn</a>, where my mentor is <a href="https://www.math.uni-bonn.de/people/ursula/">Ursula Hamenstädt</a>. I did my Ph.D. at the <a href="https://math.nd.edu/">University of Notre Dame</a> under the supervision of <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>. 
    <br>
     Here is my <a href="cv.pdf">CV</a>.</p>
   <hr>
   <h3> Contact Information:</h3>
-  &emsp;&emsp; Email: xiyanmath [at] gmail [dot] com
+  &emsp;&emsp; Email: zhongx [at] mpim-bonn [dot] de
   <br>
   &emsp;&emsp; Vivatsgasse 7, 53111 Bonn, Germany
   <hr>
@@ -29,7 +29,8 @@
   <p>I am mainly interested in geometric group theory, especially mapping class groups.</p>
   <hr>
   <h3> Papers/Preprints: </h3>
-  <p> <a href="https://arxiv.org/abs/2401.13869">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures.</a> To appear in Geometry&Topology. </p>
+  <p> 1.<a href="https://arxiv.org/abs/2401.13869">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures.</a>(to appear in Geometry & Topology). </p>
+  <p> 2.<a href="https://arxiv.org/abs/2507.11365">Linear representations of the mapping class group of dimension at most 3g-3, with Julian Kaufmann, Nick Salter, and Zhong Zhang.(preprint).</a></p>
   <hr>
   <h3> Education:</h3>
   <ul>
@@ -54,14 +55,6 @@
   <ul>
     <li> Hosted the <a href="https://sites.google.com/nd.edu/gsts/fall-2022?authuser=0">Graduate Student Topology Seminar</a> on Fall 2022, with a minicourse on homology stability of mapping class groups (<a href="HomologyStabilityLecture.pdf">Notes</a>)</li>
   </ul>
-  <hr>
-  <h3> Conferences Attended:</h3>
-<ul>
-<li><a href="https://margalit.droppages.net/tsw24/about.html">Topology Student Workshop</a> at Vanderbilt University</li>
-<li>Mid-Atlantic Topology Conference at Northeastern University</li> 
-<li><a href="https://math.ou.edu/~ppatzt/stability2022.html">Stability in Topology, Arithmetic, and Representation Theory 2022</a> at Purdue Univerity</li> 
-<li><a href="https://math.uchicago.edu/~farb/ModM4/ModM4-webpage">Workshop/Minicourse on Mod(M^4)</a> at the University of Chicago</li> 
-</ul>  
   <hr>
   <h3> Teaching Experience:</h3>
     <ul>
