--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <hr>
   <h3> Papers/Preprints: </h3>
   <p> 1.<a href="https://arxiv.org/abs/2401.13869">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures.</a>(to appear in Geometry & Topology). </p>
-  <p> 2.<a href="https://arxiv.org/abs/2507.11365">Linear representations of the mapping class group of dimension at most 3g-3, with Julian Kaufmann, Nick Salter, and Zhong Zhang.(preprint).</a></p>
+  <p> 2.<a href="https://arxiv.org/abs/2507.11365">Linear representations of the mapping class group of dimension at most 3g-3,</a> with Julian Kaufmann, Nick Salter, and Zhong Zhang.(preprint).</p>
   <hr>
   <h3> Education:</h3>
   <ul>
