--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
   <h3> Education:</h3>
   <ul>
     <li>
-<a href="https://english.pku.edu.cn/">Peking University</a> (2016.09-2020.07)
+B.S. at <a href="https://english.pku.edu.cn/">Peking University</a> (2016.09-2020.07)
   <br>
   &emsp;&emsp; Advisor: <a href="http://scholar.pku.edu.cn/liuyi/home">Yi Liu</a>
   <br>
   &emsp;&emsp; Thesis: <a href="Thesis-Xiyan Zhong.pdf">Introduction to Gromov Hyperbolicity of the Curve Complex</a>
     </li>
     <li>
-      <a href="https://www.nd.edu/">University of Notre Dame</a> (2020.08-)
+ Ph.D. at <a href="https://www.nd.edu/">University of Notre Dame</a> (2020.08-2025.05)
   <br>
   &emsp;&emsp; Advisor: <a href="https://www3.nd.edu/~andyp/">Andrew Putman</a>
     </li>
