--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
   <p>I am mainly interested in geometric group theory, especially mapping class groups.</p>
   <hr>
   <h3> Papers/Preprints: </h3>
-  <p> 1.<a href="https://arxiv.org/abs/2401.13869">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures.</a>(to appear in Geometry & Topology). </p>
+  <p> 1.<a href="https://msp.org/gt/2026/30-1/p04.xhtml">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures.</a> Geometry & Topology 30-1 (2026), 155--202. </p>
   <p> 2.<a href="https://arxiv.org/abs/2507.11365">Linear representations of the mapping class group of dimension at most 3g-3,</a> with Julian Kaufmann, Nick Salter, and Zhong Zhang.(preprint).</p>
+  <p> 3.<a href="https://arxiv.org/abs/2512.13879">Stable cohomology of universal character varieties,</a> with Ishan Banerjee, Faye Jackson, Anne Larsen, and Sam Payne.</p>
   <hr>
   <h3> Education:</h3>
   <ul>
@@ -39,7 +40,7 @@ B.S. at <a href="https://english.pku.edu.cn/">Peking University</a> (2016.09-202
   <br>
   &emsp;&emsp; Advisor: <a href="http://scholar.pku.edu.cn/liuyi/home">Yi Liu</a>
   <br>
-  &emsp;&emsp; Thesis: <a href="Thesis-Xiyan Zhong.pdf">Introduction to Gromov Hyperbolicity of the Curve Complex</a>
+  &emsp;&emsp; Thesis: Introduction to Gromov Hyperbolicity of the Curve Complex</a>
     </li>
     <li>
  Ph.D. at <a href="https://www.nd.edu/">University of Notre Dame</a> (2020.08-2025.05)
