--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <hr>
   <h3> Papers/Preprints: </h3>
   <p> 1.<a href="https://msp.org/gt/2026/30-1/p04.xhtml">Prym Representations and Twisted Cohomology of the Mapping Class Group with Level Structures.</a> Geometry & Topology 30-1 (2026), 155--202. </p>
-  <p> 2.<a href="https://arxiv.org/abs/2507.11365">Linear representations of the mapping class group of dimension at most 3g-3,</a> with Julian Kaufmann, Nick Salter, and Zhong Zhang.(preprint).</p>
-  <p> 3.<a href="https://arxiv.org/abs/2512.13879">Stable cohomology of universal character varieties,</a> with Ishan Banerjee, Faye Jackson, Anne Larsen, and Sam Payne.</p>
+  <p> 2.<a href="https://arxiv.org/abs/2507.11365">Linear representations of the mapping class group of dimension at most 3g-3,</a> with Julian Kaufmann, Nick Salter, and Zhong Zhang.(preprint)</p>
+  <p> 3.<a href="https://arxiv.org/abs/2512.13879">Stable cohomology of universal character varieties,</a> with Ishan Banerjee, Faye Jackson, Anne Larsen, and Sam Payne.(preprint)</p>
   <hr>
   <h3> Education:</h3>
   <ul>
